--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -37,10 +37,10 @@ Mobile Menu
 					<a href="#">PAGES</a>
 					<ul class="sub-menu">
 						<li>
-							<a href="/projet">Projet</a>
+							<a href="/project">Projet</a>
 						</li>
 						<li>
-							<a href="/project-detaillé">Projet détaillé</a>
+							<a href="/project-detaille">Projet détaillé</a>
 						</li>
 						<li>
 							<a href="/avis">Avis</a>
@@ -137,8 +137,8 @@ Header Area
 				<div class="row align-items-center justify-content-between">
 					<div class="col-auto">
 						<div class="header-logo">
-							<a href="index.html"><img src="assets/img/logo_orange 2.png" alt="dealaro"></a>
-							<a href="index.html"><img src="assets/img/AMD 37.png" alt="dealaro"></a>
+							<a href="/"><img src="assets/img/logo_orange 2.png" alt=""></a>
+							<a href="/"><img src="assets/img/AMD 37.png" alt=""></a>
 						</div>
 					</div>
 					<div class="col-auto">
