--- a/templates/service/index.html.twig
+++ b/templates/service/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Service index{% endblock %}
+{% block title %}Service{% endblock %}
 
 {% block body %}
     <h1>Service index</h1>
