mise en place de projet et des photos, slug etc

--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -46,7 +46,7 @@
 					<div class="title-area mb-0">
 						<h3 class="sub-title">A PROPOS DE L'ENTREPRISE</h3>
 						<h2 class="sec-title">Bienvenue Sur AMD37</h2>
-						<p class="content">Fort de 30 ans d’expérience, AMD37 intervient chez vous ou sur site pour l’entretien et la réparation de tous types de véhicules : autos, poids lourds, engins. Rapide, pro, et toujours équipé.</p>
+						<p class="content">Fort de 30 ans d’expérience, AMD37 intervient chez vous ou sur site pour l’entretien et la réparation de tous types de véhicules : autos, poids lourds, engins de chantier et locomotive. Rapide, pro, et toujours équipé.</p>
 						<div class="list-column2">
 							<div class="checklist">
 								<ul>
@@ -60,9 +60,9 @@
 							</div>
 							<div class="checklist">
 								<ul>
-									<li><img src="assets/img/icon/check.svg" alt="img">Automobile</li>
+									<li><img src="assets/img/icon/check.svg" alt="img">Automobile & Poids Lourd</li>
 									<li><img src="assets/img/icon/check.svg" alt="img">Engin Agricole & Engin De Traveaux Public</li>
-									<li><img src="assets/img/icon/check.svg" alt="img">Poids Lourd</li>
+									<li><img src="assets/img/icon/check.svg" alt="img">locomotive</li>
 								</ul>
 							</div>
 						</div>
@@ -192,8 +192,6 @@
 						<div class="quote-icon">
 							<img src="{{ asset('assets/img/testimonial/quote-icon2.svg') }}" alt="quote">
 						</div>
-						<!-- Étoiles dynamiques -->
-
 						<p class="testi_content">{{ testimonial.content }}</p>
 						<div class="testi-box_profile">
 							<div class="details">
@@ -223,33 +221,32 @@
 					<div class="title-area text-center">
 						<h2 class="client-title h4 mb-0">
 							<span class="double-line"></span>
-							WE HAVE TRUSTED MORE THEN
-							<span class="text-theme">20K+</span>GLOBAL CLIENTS</h2>
+							NOS MARQUES & PARTENAIRES
 					</div>
 				</div>
 			</div>
 			<div class="client-box-border">
 				<div class="row as-carousel" id="brandSlide1" data-slide-show="5" data-lg-slide-show="4" data-md-slide-show="3" data-sm-slide-show="2" data-xs-slide-show="1" data-arrows="false">
 					<div class="col-auto client-box">
-						<img src="assets/img/client/client_1_1.png" alt="Client Logo">
+						<img src="assets/img/client/bv2ii.png" alt="Client Logo">
 					</div>
 					<div class="col-auto client-box">
-						<img src="assets/img/client/client_1_2.png" alt="Client Logo">
+						<img src="assets/img/client/Deutz.png" alt="Client Logo">
 					</div>
 					<div class="col-auto client-box">
-						<img src="assets/img/client/client_1_3.png" alt="Client Logo">
+						<img src="assets/img/client/ebpl.png" alt="Client Logo">
 					</div>
 					<div class="col-auto client-box">
-						<img src="assets/img/client/client_1_1.png" alt="Client Logo">
+						<img src="assets/img/client/Peugeot.png" alt="Client Logo">
 					</div>
 					<div class="col-auto client-box">
-						<img src="assets/img/client/client_1_4.png" alt="Client Logo">
+						<img src="assets/img/client/renault.png" alt="Client Logo">
 					</div>
 					<div class="col-auto client-box">
-						<img src="assets/img/client/client_1_2.png" alt="Client Logo">
+						<img src="assets/img/client/Sarl.png" alt="Client Logo">
 					</div>
 					<div class="col-auto client-box">
-						<img src="assets/img/client/client_1_3.png" alt="Client Logo">
+						<img src="assets/img/client/Yanmar.png" alt="Client Logo">
 					</div>
 				</div>
 			</div>
