--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,15 +1,15 @@
 <!--==============================
         Footer Area
 ==============================-->
-<footer class="footer-wrapper footer-layout2" data-bg-src="assets/img/bg/footer_bg_2.png">
-    <div class="anime-img-1 shape-mockup jump d-none d-lg-block" data-right="0" data-top="120px"><img src="assets/img/bg/footer_bg_2-shape.png" alt="img"></div>
+<footer class="footer-wrapper footer-layout2" data-bg-src="{{ asset('assets/img/bg/footer_bg_2.png') }}">
+    <div class="anime-img-1 shape-mockup jump d-none d-lg-block" data-right="0" data-top="120px"><img src="{{ asset('assets/img/bg/footer_bg_2-shape.png') }}" alt="img"></div>
 
     <div class="widget-area space2-bottom">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-md-6 col-xxl-3 col-xl-3">
-					<a href="/"><img src="assets/img/logo_orange 2.png" alt="dealaro"></a>
-					<a href="/"><img src="assets/img/AMD 37.png" alt="dealaro"></a>
+					<a href="/"><img src="{{ asset('assets/img/logo_orange 2.png') }}" alt=""></a>
+					<a href="/"><img src="{{ asset('assets/img/AMD 37.png') }}" alt=""></a>
                     <div class="widget footer-widget">
                         <div class="as-widget-about">
                             <p class="about-text">Basé en Indre-et-Loire – Dépannage, entretien, et expertise mécanique directement chez vous. Appelez-nous, on s’occupe de tout !</p>
@@ -22,7 +22,7 @@
                         <div class="menu-all-pages-container">
                             <ul class="menu2">
                                 <li><a href="/contact">Contact</a></li>
-                                <li><a href="/">Acceuil</a></li>
+                                <li><a href="/">Accueil</a></li>
                             </ul>
                         </div>
                     </div>
@@ -44,11 +44,11 @@
                         <h3 class="widget_title">HORAIRES</h3>
                         <div class="company-info-wrap">
                             <ul class="company-info-list">
-                                <li class="company-info"><strong>Lundi:</strong>7H - 17H</li>
-                                <li class="company-info"><strong>Mardi:</strong>7H - 17H</li>
-                                <li class="company-info"><strong>Mercredi:</strong>7H - 17H</li>
-                                <li class="company-info"><strong>Jeudi:</strong>7H - 17H</li>
-                                <li class="company-info"><strong>Vendredi:</strong>7H - 17H</li>
+                                <li class="company-info"><strong>Lundi:</strong>8H - 18H</li>
+                                <li class="company-info"><strong>Mardi:</strong>8H - 18H</li>
+                                <li class="company-info"><strong>Mercredi:</strong>8H - 18H</li>
+                                <li class="company-info"><strong>Jeudi:</strong>8H - 18H</li>
+                                <li class="company-info"><strong>Vendredi:</strong>8H - 18H</li>
                                 <li class="company-info"><strong>Samedi:</strong>Closed</li>
                                 <li class="company-info"><strong>Dimanche:</strong>Closed</li>
                             </ul>
