--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -21,8 +21,8 @@ Mobile Menu
 			<i class="fal fa-times"></i>
 		</button>
 		<div class="mobile-logo">
-			<a href="index.html"><img src="assets/img/logo_orange 2.png" alt="amd37"></a>
-			<a href="index.html"><img src="assets/img/AMD 37.png" alt="amd37"></a>
+			<a href="index.html"><img src="{{ asset('assets/img/logo_orange 2.png') }}" alt="amd37"></a>
+			<a href="index.html"><img src="{{ asset('assets/img/AMD 37.png') }}" alt="amd37"></a>
 		</div>
 		<div class="as-mobile-menu">
 			<ul>
@@ -38,9 +38,6 @@ Mobile Menu
 					<ul class="sub-menu">
 						<li>
 							<a href="/project">Projet</a>
-						</li>
-						<li>
-							<a href="/project-detaille">Projet détaillé</a>
 						</li>
 						<li>
 							<a href="/avis">Avis</a>
@@ -63,7 +60,7 @@ Mobile Menu
 		<div class="widget footer-widget">
 			<div class="as-widget-about">
 				<div class="footer-logo">
-					<a href="/"><img src="assets/img/logo-white2_2.svg" alt="AMD37"></a>
+					<a href="/"><img src="{{ asset('assets/img/logo-white2_2.svg') }}" alt="AMD37"></a>
 				</div>
 				<p class="about-text">Fusce varius, dolor tempor interdum tristiquei bibendum.</p>
 				<ul class="footer-info-list">
@@ -88,13 +85,7 @@ Mobile Menu
 					<i class="fa-solid fa-paper-plane"></i>
 				</button>
 			</form>
-			<div class="company-info mt-35">
-				<h6 class="info-title">
-					<i class="fa-light fa-clock"></i>
-					Opening Time</h6>
-				<span class="info-details">
-					Mon-Sat :    8:00AM - 5:00PM</span>
-			</div>
+
 		</div>
 	</div>
 </div>
@@ -137,8 +128,8 @@ Header Area
 				<div class="row align-items-center justify-content-between">
 					<div class="col-auto">
 						<div class="header-logo">
-							<a href="/"><img src="assets/img/logo_orange 2.png" alt=""></a>
-							<a href="/"><img src="assets/img/AMD 37.png" alt=""></a>
+							<a href="/"><img src="{{ asset('assets/img/logo_orange 2.png') }}" alt=""></a>
+							<a href="/"><img src="{{ asset('assets/img/AMD 37.png') }}" alt=""></a>
 						</div>
 					</div>
 					<div class="col-auto">
@@ -156,9 +147,6 @@ Header Area
 										<ul class="sub-menu">
 											<li>
 												<a href="/project">Projet</a>
-											</li>
-											<li>
-												<a href="/project-detaillé">Projet détaillé</a>
 											</li>
 											<li>
 												<a href="/avis">Avis</a>
