--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -76,33 +76,32 @@
 					<div class="title-area text-center">
 						<h2 class="client-title h4 mb-0">
 							<span class="double-line"></span>
-							WE HAVE TRUSTED MORE THEN
-							<span class="text-theme">20K+</span>GLOBAL CLIENTS</h2>
+							NOS MARQUES & PARTENAIRES
 					</div>
 				</div>
 			</div>
 			<div class="client-box-border">
 				<div class="row as-carousel" id="brandSlide1" data-slide-show="5" data-lg-slide-show="4" data-md-slide-show="3" data-sm-slide-show="2" data-xs-slide-show="1" data-arrows="false">
 					<div class="col-auto client-box">
-						<img src="assets/img/client/client_1_1.png" alt="Client Logo">
+						<img src="assets/img/client/bv2ii.png" alt="Client Logo">
 					</div>
 					<div class="col-auto client-box">
-						<img src="assets/img/client/client_1_2.png" alt="Client Logo">
+						<img src="assets/img/client/Deutz.png" alt="Client Logo">
 					</div>
 					<div class="col-auto client-box">
-						<img src="assets/img/client/client_1_3.png" alt="Client Logo">
+						<img src="assets/img/client/ebpl.png" alt="Client Logo">
 					</div>
 					<div class="col-auto client-box">
-						<img src="assets/img/client/client_1_1.png" alt="Client Logo">
+						<img src="assets/img/client/Peugeot.png" alt="Client Logo">
 					</div>
 					<div class="col-auto client-box">
-						<img src="assets/img/client/client_1_4.png" alt="Client Logo">
+						<img src="assets/img/client/renault.png" alt="Client Logo">
 					</div>
 					<div class="col-auto client-box">
-						<img src="assets/img/client/client_1_2.png" alt="Client Logo">
+						<img src="assets/img/client/Sarl.png" alt="Client Logo">
 					</div>
 					<div class="col-auto client-box">
-						<img src="assets/img/client/client_1_3.png" alt="Client Logo">
+						<img src="assets/img/client/Yanmar.png" alt="Client Logo">
 					</div>
 				</div>
 			</div>
