modification de code pour amélioration

--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -61,7 +61,7 @@
 							<div class="checklist">
 								<ul>
 									<li><img src="assets/img/icon/check.svg" alt="img">Automobile & Poids Lourd</li>
-									<li><img src="assets/img/icon/check.svg" alt="img">Engin Agricole & Engin De Traveaux Public</li>
+									<li><img src="assets/img/icon/check.svg" alt="img">Engin Agricole & Engin De Traveaux Publics</li>
 									<li><img src="assets/img/icon/check.svg" alt="img">locomotive</li>
 								</ul>
 							</div>
@@ -137,7 +137,7 @@
 						<div class="title-area">
 							<span class="sub-title">POURQUOI CHOISIR AMD37</span>
 							<h2 class="sec-title">La Garantie Assurée.</h2>
-							<p class="content">Avec plus de 30 ans d’expérience, AMD37 vous propose un service de mécanique complet directement à domicile ou sur site.Équipé, réactif et à l’écoute, j’interviens sur tous types de véhicules particuliers, pros, poids lourds ou engins en toute autonomie et avec professionnalisme.</p>
+							<p class="content">Avec plus de 30 ans d’expérience, AMD37 vous propose un service de mécanique complet directement à domicile ou sur site. Équipé, réactif, et à l’écoute, j’interviens sur tous types de véhicules particuliers, pros, poids lourds ou engins en toute autonomie et avec professionnalisme.</p>
 						</div>
 						<div class="row  g-4">
 							<div class="col-sm-6">
