--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,159 +1,160 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Contact{% endblock %}
+{% block title %}Contact
+{% endblock %}
 
 {% block javascripts %}
-    {% if karser_recaptcha3_site_key is defined %}
-<script src="https://www.google.com/recaptcha/api.js?render={{ karser_recaptcha3_site_key }}"></script>
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const form = document.querySelector('form[name="contact_form"]');
-        form.addEventListener('submit', function(e) {
-            e.preventDefault(); 
-            
-            grecaptcha.ready(function () {
-                grecaptcha.execute('{{ karser_recaptcha3_site_key }}', {action: 'contact'}).then(function (token) {
-                    const recaptchaInput = document.querySelector('input[name="contact_form[captcha]"]');
-                    if (recaptchaInput) {
-                        recaptchaInput.value = token;
-                    }
-                    form.submit();  
-                });
-            });
-        });
-    });
-</script>
+	{% if karser_recaptcha3_site_key is defined %}
+		<script src="https://www.google.com/recaptcha/api.js?render={{ karser_recaptcha3_site_key }}"></script>
+		<script>
+			document.addEventListener('DOMContentLoaded', function () {
+const form = document.querySelector('form[name="contact_form"]');
+form.addEventListener('submit', function (e) {
+e.preventDefault();
 
-    {% endif %}
+grecaptcha.ready(function () {
+grecaptcha.execute('{{ karser_recaptcha3_site_key }}', {action: 'contact'}).then(function (token) {
+const recaptchaInput = document.querySelector('input[name="contact_form[captcha]"]');
+if (recaptchaInput) {
+recaptchaInput.value = token;
+}
+form.submit();
+});
+});
+});
+});
+		</script>
+
+	{% endif %}
 {% endblock %}
 
 
-
-
-
 {% block body %}
-    <!--==============================
-    Breadcumb
-============================== -->
-<div class="breadcumb-wrapper" data-bg-src="assets/img/hero/vehicule.png" data-overlay="title" data-opacity="7">
-    <!-- bg animated image/ -->
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="breadcumb-content">
-                    <h1 class="breadcumb-title">Contact</h1>
-                    <ul class="breadcumb-menu">
-                        <li><a href="/">ACCUEIL</a></li>
-                        <li class="active">CONTACT</li>
-                    </ul>
-                </div>
-            </div>
-            </div>
-        </div>
-    </div>
+	<!--==============================
+	    Breadcumb
+	============================== -->
+	<div
+		class="breadcumb-wrapper" data-bg-src="assets/img/hero/vehicule.png" data-overlay="title" data-opacity="7">
+		<!-- bg animated image/ -->
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8">
+					<div class="breadcumb-content">
+						<h1 class="breadcumb-title">Contact</h1>
+						<ul class="breadcumb-menu">
+							<li>
+								<a href="/">ACCUEIL</a>
+							</li>
+							<li class="active">CONTACT</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
 <!--==============================
 Service Area  
 ==============================-->
 <section class="space">
-    <div class="container">
-        <div class="row gy-30 justify-content-center">
-            <div class="col-md-6 col-lg-4">
-                <div class="contact-box">
-                    <div class="contact-box_icon">
-                        <i class="fa fa-location-dot"></i>
-                    </div>
-                    <div class="contact-box_info">
-                        <h4 class="contact-box_title">Mon Adresse</h4>
-                        <p class="contact-box_text">Sorigny</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-                <div class="contact-box">
-                    <div class="contact-box_icon">
-                        <i class="fa fa-phone"></i>
-                    </div>
-                    <div class="contact-box_info">
-                        <h4 class="contact-box_title">Contact</h4>
-                        <a href="mailto:sylvainmestivier@outlook.fr" class="contact-box_link">sylvainmestivier@outlook.fr</a>
-                        <a href="tel:0699483005" class="contact-box_link">0699483005</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-                <div class="contact-box">
-                    <div class="contact-box_icon">
-                        <i class="fa fa-clock"></i>
-                    </div>
-                    <div class="contact-box_info">
-                        <h4 class="contact-box_title">Mes Horaires</h4>
-                        <p class="contact-box_text">7H - 17H ( Lundi - Vendredi )</p>
-                        <p class="contact-box_text">Samedi & Dimanche Fermée</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div class="container">
+		<div class="row gy-30 justify-content-center">
+			<div class="col-md-6 col-lg-4">
+				<div class="contact-box">
+					<div class="contact-box_icon">
+						<i class="fa fa-location-dot"></i>
+					</div>
+					<div class="contact-box_info">
+						<h4 class="contact-box_title">Mon Adresse</h4>
+						<p class="contact-box_text">Sorigny</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-4">
+				<div class="contact-box">
+					<div class="contact-box_icon">
+						<i class="fa fa-phone"></i>
+					</div>
+					<div class="contact-box_info">
+						<h4 class="contact-box_title">Contact</h4>
+						<a href="mailto:sylvainmestivier@outlook.fr" class="contact-box_link">sylvainmestivier@outlook.fr</a>
+						<a href="tel:0699483005" class="contact-box_link">0699483005</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-4">
+				<div class="contact-box">
+					<div class="contact-box_icon">
+						<i class="fa fa-clock"></i>
+					</div>
+					<div class="contact-box_info">
+						<h4 class="contact-box_title">Mes Horaires</h4>
+						<p class="contact-box_text">8H - 18H ( Lundi - Vendredi )</p>
+						<p class="contact-box_text">Samedi & Dimanche Fermée</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
 
 <!--==============================
     Contact Area  
 ==============================-->
 <div class="contact-area space bg-smoke3 overflow-hidden">
-    <div class="contact-anime-img-1 jump shape-mockup d-none d-xl-block" data-top="0" data-right="0">
-        <img src="{{ asset('assets/img/contact/contact-bg-shape.png') }}" alt="img">
-    </div>
-    <div class="contact-img-2 shape-mockup d-none d-xl-block" data-right="0">
-        <img src="{{ asset('assets/img/contact/thanksc.jpg') }}" alt="img">
-    </div>
-    <div class="container">
-        <div class="row gx-0">
-            <div class="col-xl-8 contact-form-wrap">
-                <div class="title-area mb-40">
-                    <h2 class="sec-title">Vous pouvez nous contacter si vous avez besoin d'aide !</h2>
-                </div>
+	<div class="contact-anime-img-1 jump shape-mockup d-none d-xl-block" data-top="0" data-right="0">
+		<img src="{{ asset('assets/img/contact/contact-bg-shape.png') }}" alt="img">
+	</div>
+	<div class="contact-img-2 shape-mockup d-none d-xl-block" data-right="0">
+		<img src="{{ asset('assets/img/contact/thanksc.jpg') }}" alt="img">
+	</div>
+	<div class="container">
+		<div class="row gx-0">
+			<div class="col-xl-8 contact-form-wrap">
+				<div class="title-area mb-40">
+					<h2 class="sec-title">Vous pouvez nous contacter si vous avez besoin d'aide !</h2>
+				</div>
 
-                {% for message in app.flashes('success') %}
-                    <div class="alert alert-success">{{ message }}</div>
-                {% endfor %}
+				{% for message in app.flashes('success') %}
+					<div class="alert alert-success">{{ message }}</div>
+				{% endfor %}
 
-                {{ form_start(form, {
+				{{ form_start(form, {
                     attr: { class: 'review-form' },
                     name: 'contact_form'
                 }) }}
-                <div class="row gx-24">
-                    <div class="form-group style-white2 col-md-6">
-                        {{ form_row(form.firstName, {'attr': {'class': 'form-control', 'placeholder': 'Entrer Votre Nom'}}) }}
-                        <i class="fal fa-user"></i>
-                    </div>
-                    <div class="form-group style-white2 col-md-6">
-                        {{ form_row(form.lastName, {'attr': {'class': 'form-control', 'placeholder': 'Entrer Votre Prénom'}}) }}
-                        <i class="fal fa-user"></i>
-                    </div>
-                    <div class="form-group style-white2 col-md-6">
-                        {{ form_row(form.email, {'attr': {'class': 'form-control', 'placeholder': 'Entrez Votre Mail'}}) }}
-                        <i class="fal fa-envelope"></i>
-                    </div>
-                    <div class="form-group col-md-6">
-                        {{ form_row(form.subject) }}
-                    </div>
-                    <div class="form-group style-white2 col-12">
-                        {{ form_row(form.message, {'attr': {'class': 'form-control', 'placeholder': 'Message'}}) }}
-                        <i class="fal fa-comment"></i>
-                    </div>
-                    <div class="form-btn col-12 mt-10">
-                        <button class="as-btn style4" type="submit">Envoyez</button>
-                    </div>
-                    <div class="form-group" style="display:none;">
-                        {{ form_row(form.captcha) }}
-                    </div>
-                </div>
-                {{ form_end(form) }}
-            </div>
-        </div>
-    </div>
+				<div class="row gx-24">
+					<div class="form-group style-white2 col-md-6">
+						{{ form_row(form.firstName, {'attr': {'class': 'form-control', 'placeholder': 'Entrer Votre Prénom'}}) }}
+						<i class="fal fa-user"></i>
+					</div>
+					<div class="form-group style-white2 col-md-6">
+						{{ form_row(form.lastName, {'attr': {'class': 'form-control', 'placeholder': 'Entrer Votre Nom'}}) }}
+						<i class="fal fa-user"></i>
+					</div>
+					<div class="form-group style-white2 col-md-6">
+						{{ form_row(form.email, {'attr': {'class': 'form-control', 'placeholder': 'Entrez Votre Mail'}}) }}
+						<i class="fal fa-envelope"></i>
+					</div>
+					<div class="form-group col-md-6">
+						{{ form_row(form.subject) }}
+					</div>
+					<div class="form-group style-white2 col-12">
+						{{ form_row(form.message, {'attr': {'class': 'form-control', 'placeholder': 'Message'}}) }}
+						<i class="fal fa-comment"></i>
+					</div>
+					<div class="form-btn col-12 mt-10">
+						<button class="as-btn style4" type="submit">Envoyez</button>
+					</div>
+					<div class="form-group" style="display:none;">
+						{{ form_row(form.captcha) }}
+					</div>
+				</div>
+				{{ form_end(form) }}
+			</div>
+		</div>
+	</div>
 </div>
 
 
@@ -161,8 +162,5 @@ Service Area
 Appointment Area  
 ==============================-->
 <div class="map-sec">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2703.5321695691944!2d0.6948993892388788!3d47.24349006757399!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1719178260000!5m2!1sfr!2sfr"  allowfullscreen="" loading="lazy"></iframe>
-</div>
-
-
-{% endblock %}
+	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2703.5321695691944!2d0.6948993892388788!3d47.24349006757399!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1719178260000!5m2!1sfr!2sfr" allowfullscreen="" loading="lazy"></iframe>
+</div>{% endblock %}
